# Pico

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  test_output.txt
docs/: JSON序列规范.md  NativeHost清单规范.md  PicoATE_Architecture_Design_Document.docx  PicoATE_Architecture_Design_Document.md  PicoATE_TaskEngine_Development_Plan.xlsx  current_framework_capability_breakdown.md  execution_report_format.md  generate_architecture_doc.py  generate_task_engine_plan_xlsx.py  hardware_module_lifecycle_design.md  module_contract.md  module_runtime.md  nativehost_manifest.md  progress_plan_2026-06-20.md  project_vision.md  sequence_json_schema.md  technical_debt.md  ui_development_plan.md  ui_project_structure.md  variable_resolver.md  work_summary_2026-06-22.md  work_summary_2026-06-24.md  work_summary_2026-06-26.md  work_summary_2026-06-28.md  work_summary_2026-06-29.md  变量与结果引用.md  工位配置规范.md  执行报告格式.md  文档索引.md  模块运行时.md
docs/Plan/: P1_Plan.md  引擎设计.md  总体设计.md
examples/: basic_sequence.json  can_dll_sequence.json  custom_disabled_sequence.json  dmm_can_adapter_sequence.json  external_echo_sequence.json  for_loop_sequence.json  nativehost_dll_sequence.json  persistent_instrument_sequence.json  python_echo_sequence.json  scoped_result_sequence.json  simple_sequence.json  test_item_sequence.json
examples/modules/: echo_module.py
examples/nativehost/: can_decode_manifest.json  test_dll_manifest.json
examples/stations/: basic_station.json
src/: CMakeLists.txt
src/canexamplemodule/: CMakeLists.txt  CanExampleModule.cpp
src/cli/: CMakeLists.txt  Main.cpp
src/core/: CMakeLists.txt
src/core/include/PicoATE/Core/: BarrierController.h  DeviceSessionManager.h  DeviceTransportSession.h  DllBridgeInvoker.h  ErrorPolicyEngine.h  ExecutionGraphScheduler.h  ExecutionPlan.h  ExecutionReport.h  ExecutionReportJson.h  ExecutionResultStore.h  ExecutionSession.h  InstrumentAdapterModules.h  LoopController.h  MeasurementTypes.h  ModuleBindingRegistrar.h  ModuleRuntime.h  ModuleTransportJson.h  NativeHostManifest.h  NodeRunner.h  PersistentQProcessTransport.h  PlanBuilder.h  PlanCache.h  QProcessTransport.h  ResourceManager.h  RuntimeEvent.h  RuntimeTypes.h  RuntimeVariableResolver.h  SequenceCompiler.h  SequenceDef.h  SessionSnapshot.h  StationConfig.h  StationRuntime.h  StopToken.h  VariableResolver.h
src/core/src/: BarrierController.cpp  DeviceSessionManager.cpp  DeviceTransportSession.cpp  DllBridgeInvoker.cpp  ErrorPolicyEngine.cpp  ExecutionGraphScheduler.cpp  ExecutionPlan.cpp  ExecutionReportJson.cpp  ExecutionResultStore.cpp  ExecutionSession.cpp  InstrumentAdapterModules.cpp  LoopController.cpp  MeasurementTypes.cpp  ModuleBindingRegistrar.cpp  ModuleRuntime.cpp  ModuleTransportJson.cpp  NativeHostManifest.cpp  NodeRunner.cpp  PersistentQProcessTransport.cpp  PlanBuilder.cpp  PlanCache.cpp  QProcessTransport.cpp  ResourceManager.cpp  RuntimeEvent.cpp  RuntimeVariableResolver.cpp  SequenceCompiler.cpp  SequenceDef.cpp  StationConfig.cpp  StationRuntime.cpp  StopToken.cpp  VariableResolver.cpp
src/fakeinstrumenthost/: CMakeLists.txt  Main.cpp
src/mockhost/: CMakeLists.txt  Main.cpp
src/nativehost/: CMakeLists.txt  Main.cpp
src/testdllmodule/: CMakeLists.txt  TestDllModule.cpp
templates/can_hardware_dll/: CMakeLists.txt  PicoATECanHardwareModule.cpp  README.md  VendorCanAdapter.cpp  VendorCanAdapter.h  can_hardware_manifest.json  can_hardware_sequence.json
tests/: CMakeLists.txt  CoreTests.cpp
ui/: CMakeLists.txt  CMakePresets.json
ui/prototype/: index.html
ui/src/: BufferedRuntimeEventSink.cpp  BufferedRuntimeEventSink.h  CMakeLists.txt  CoreExecutionService.cpp  CoreExecutionService.h  ExecutionViewModel.cpp  ExecutionViewModel.h  ExecutionWorker.cpp  ExecutionWorker.h  IExecutionService.h  Main.cpp  MainWindow.cpp  MainWindow.h  ReportExporter.cpp  ReportExporter.h  ReportHistoryStore.cpp  ReportHistoryStore.h  RunnerModels.cpp  RunnerModels.h  UiExecutionTypes.cpp  UiExecutionTypes.h
ui/tests/: CMakeLists.txt  ExecutionViewModelTests.cpp
